[FIX] <pro>Table: Fix the style issue where the icon in the range mode Select of the filterBar type filter bar overlaps.

--- a/components-pro/table/query-bar/style/index.less
+++ b/components-pro/table/query-bar/style/index.less
@@ -761,7 +761,7 @@
     }
 
     // select
-    .@{select-prefix-cls}-empty:not(.@{select-prefix-cls}-focused) {
+    .@{select-prefix-cls}-empty.@{select-prefix-cls}-multiple:not(.@{select-prefix-cls}-focused) {
       .@{select-prefix-cls},
       .@{select-prefix-cls}-multiple-value {
         max-width: 0;
